--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,14 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
-    directories:
-      - "/angular-spa"
-      - "/msal-client-credentials-flow"
-      - "/protect-api"
-      - "/protect-function-app"
-      - "/protected-api-access-protected-api"
-      - "/react-spa"
-      - "/vanillajs-spa"
+    directory: "/"
     schedule:
       interval: "daily"
     labels:
